tests/paczka1/fuzzy1/12662176.err
Error in line 7: 9AJxyK S169 70,8
Error in line 11: 9AJxyK A824 48,6
Error in line 8: A443 S169 64,4
Error in line 1: yHtF6YLj A824 58,0
Error in line 22: JvsIdmPIM S169 44,3
Error in line 20: KT27I14k A602 98,0
Error in line 27: KT27I14k A824 49,7
Error in line 33: KT27I14k S169 31,3
Error in line 19: yHtF6YLj S169 35,8
